build loguru_example

--- a/mayhem/Dockerfile
+++ b/mayhem/Dockerfile
@@ -12,12 +12,12 @@ WORKDIR /loguru
 ## TODO: ADD YOUR BUILD INSTRUCTIONS HERE.
 RUN mkdir build && \
     cd build/ && \
-    CC=clang CXX=clang++ cmake .. && \
+    CC=clang CXX=clang++ cmake ../loguru_example && \
     make
 
 # Package Stage
 FROM --platform=linux/amd64 ubuntu:20.04
 
 ## TODO: Change <Path in Builder Stage>
-COPY --from=builder /loguru/build/loguru /
+COPY --from=builder /loguru/build/loguru_example /
 
